# multiresolution-mesh-creator

./: .gitignore  README.md
dvidutils/: .gitignore  .travis.yml  CMakeLists.txt  README.md  setup.cfg
dvidutils/conda-recipe/: meta.yaml
dvidutils/docs/: conf.py  dvidutils.rst  index.rst
dvidutils/dvidutils/: __init__.py
dvidutils/src/: destripe.cpp  destripe.hpp  destripe_main.cpp  downsample_labels.hpp  labelmapper.hpp  pngutils.cpp  pngutils.hpp  remap_duplicates.hpp  utils.hpp
dvidutils/tests/: test_downsample.py  test_labelmapper.py  test_pydraco.py  test_remap_duplicates.py
pyfqmr-Fast-Quadric-Mesh-Reduction/pyfqmr/: Simplify.pyx
